Update to Twilio functionality.  Removal of street view from map.  Fixed footer overlap.

--- a/public/assets/css/salon.css
+++ b/public/assets/css/salon.css
@@ -176,3 +176,11 @@ footer {
 ul .admin-ul {
     display: none;
 }
+
+#submitContact {
+    cursor: pointer;
+}
+
+.card {
+    margin-bottom: 45px;
+}
